fixes label visibility and adjusts topical display on state of the state presentation

--- a/test/keller/state-of-the-state-document-cloud/css/style.css
+++ b/test/keller/state-of-the-state-document-cloud/css/style.css
@@ -42,6 +42,10 @@
     select {font-size: 200%;}
 }
 
+@media (max-width: 585px) {
+    #controls .indicator p {display: none;}
+}
+
 @media (min-width: 768px) {
     select {font-size: 200%;}
 }
